--- a/Shiny App and repro pitch.Rmd
+++ b/Shiny App and repro pitch.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Course Project: Shiny Application and Reproducible Pitch"
-author: "Ben Karmay"
-date: "06/12/2017"
+author: "Indu Adumankulath"
+date: "30/07/2020"
 output: ioslides_presentation
 ---
 
